GNOME Bugzilla – Bug 623344
Search incorrectly handles input
Last modified: 2012-09-09 21:52:39 UTC
While looking for a way to launch a new application window instead of activating an already running instance (is there one btw?), I've found that pressing alt+enter and shift+enter let's you type a break character. That seems weird. Doesn't shell use the GTK+ input methods (and if not, shouldn't it)?
(In reply to comment #0) > While looking for a way to launch a new application window instead of > activating an already running instance (is there one btw?) Right click -> Open New Window
(In reply to comment #1) > (In reply to comment #0) > > While looking for a way to launch a new application window instead of > > activating an already running instance (is there one btw?) > > Right click -> Open New Window I obviously meant the keyboard :)
This is still broken in 3.0.x. Pressing alt+enter will give you a break character. It's displayed as a solid block but you can copy/paste it somewhere else to confirm that it's indeed a break.
I can't reproduce that with GNOME Shell 3.5.91
I can reproduce this even on clutter's test-text-field. Patch coming.
Created attachment 223859 [details] [review] text: Don't accept new line characters in single line mode Modified Return key presses don't trigger ::activate so we would end up adding an unprintable character to a single paragraph mode pango layout which renders it as a box.
Review of attachment 223859 [details] [review]: looks okay
Attachment 223859 [details] pushed as ea50df6 - text: Don't accept new line characters in single line mode